[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/patrickovm/grrs"
repository = "https://github.com/patrickovm/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"
